resolve #10 show whitespaces

--- a/packages-custom/ayapi-ui/styles/editor.less
+++ b/packages-custom/ayapi-ui/styles/editor.less
@@ -36,4 +36,7 @@ atom-text-editor, atom-text-editor::shadow {
     background-color: rgba(100,100,100,.4);
     border-bottom: none;
   }
+  .invisible-character {
+    color: rgba(255,255,255,.3);
+  }
 }
